--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,9 @@ $RECYCLE.BIN/
 # Thumbnails
 ._*
 
+# Compiled JS files
+*.js
+
 # Files that might appear on external disk
 .Spotlight-V100
 .Trashes
